--- a/article/docs/2020/第11周.md
+++ b/article/docs/2020/第11周.md
@@ -2,4 +2,24 @@
 title: 第11周
 ---
 
-# title
+## 工具
+
+### 你项目中没有安装的 VS Code 插件（实用）
+
+#### javascript console utils
+
+![avatar](./assets/js_console_utils.jpeg)
+
+按住快捷键 ctrl + shift + L(windows)、cmd + shift + L 即可出现一个带变量名的 console.log。
+
+#### indent rainbow
+
+![avatar](./assets/indent_rainbow.jpeg)
+
+通过颜色区分缩进，再也不担心犯强迫症。
+
+#### bracket pair colorizer
+
+![avatar](./assets/bracket_pair_colorizer.jpeg)
+
+用不同颜色的标注帮助区分多个括号,花括号的起始位置。
