--- a/article/docs/2020/第11周.md
+++ b/article/docs/2020/第11周.md
@@ -23,3 +23,56 @@ title: 第11周
 ![avatar](./assets/bracket_pair_colorizer.jpeg)
 
 用不同颜色的标注帮助区分多个括号,花括号的起始位置。
+
+### 文章
+
+#### 清明节时，是如何实现网站灰色效果
+
+清明节，国家举行了祭奠仪式，我们打开常用的 app,网站时，看到的是灰色的主题。
+当时我第一眼看到，觉得应该是控制了主题色，通过样式变量来对全局的组件进行颜色的设置。后来发现实现其实更加简单。
+
+我们打开一个网站，先看看正常的效果：
+
+![avatar](./assets/normal_internet.png)
+
+然后再来看看灰色效果：
+
+![avatar](./assets/gray_internet.png)
+
+是不是觉得很有意思。
+
+我们来看看是怎么回事。
+
+##### filter css 属性
+
+filter CSS 属性将模糊或颜色偏移等图形效果应用于元素。滤镜通常用于调整图像，背景和边框的渲染。
+
+CSS 标准里包含了一些已实现预定义效果的函数。你也可以参考一个 SVG 滤镜，通过一个 URL 链接到 SVG 滤镜元素 (SVG filter element[https://developer.mozilla.org/en-US/docs/Web/SVG/Element/filter])。
+
+这里实现灰色滤镜效果的方法就是 filter: grayscale()。
+
+将图像转换为灰度图像。值定义转换的比例。percent 值为 100% 则完全转为灰度图像，值为 0% 图像无变化。值在 0% 到 100% 之间，则是效果的线性乘子。若未设置，值默认是 0。另外除了传递百分比，还可以传递浮点数，效果是一样的。
+
+如：
+
+filter: grayscale(1)
+filter: grayscale(100%)
+
+所以到这里我们想要把全站变成灰色，再考虑到各浏览器兼容写法：
+
+```
+.gray {
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    filter: grayscale(100%);
+    filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);
+}
+```
+
+最后看一下浏览器的兼容性：
+
+![avatar](./assets/filter_caniuse.png)
+
+可以看到，除了 ie 外，其他的 PC、手机端的浏览器都支持了，Firefox 的 PC、安卓端还单独对 SVG 图像加了支持，可以放心使用。
