--- a/article/docs/2020/第17周.md
+++ b/article/docs/2020/第17周.md
@@ -9,4 +9,8 @@ title: 第17周
 ### bootstrap5 将移除Jquery，且不再对IE进行支持
 [资讯来源](https://github.com/twbs/bootstrap/pull/23586)
 
-## 工具
+## Vscode 插件
+Jest 可实时监听测试代码的改动，并给出测试结果
+
+## 文章
+[基于 qiankun 的微前端最佳实践（图文并茂） - 应用间通信篇](https://juejin.im/post/5eb530495188256d9a28da13)
